src/test/ui/borrowck/mut-borrow-in-loop.stderr
error[E0499]: cannot borrow `*arg` as mutable more than once at a time
  --> $DIR/mut-borrow-in-loop.rs:10:25
   |
LL | impl<'a, T : 'a> FuncWrapper<'a, T> {
   |      -- lifetime `'a` defined here
...
LL |             (self.func)(arg)
   |             ------------^^^-
   |             |           |
   |             |           mutable borrow starts here in previous iteration of loop
   |             argument requires that `*arg` is borrowed for `'a`

error[E0499]: cannot borrow `*arg` as mutable more than once at a time
  --> $DIR/mut-borrow-in-loop.rs:16:25
   |
LL | impl<'a, T : 'a> FuncWrapper<'a, T> {
   |      -- lifetime `'a` defined here
...
LL |             (self.func)(arg)
   |             ------------^^^-
   |             |           |
   |             |           mutable borrow starts here in previous iteration of loop
   |             argument requires that `*arg` is borrowed for `'a`

error[E0499]: cannot borrow `*arg` as mutable more than once at a time
  --> $DIR/mut-borrow-in-loop.rs:23:25
   |
LL | impl<'a, T : 'a> FuncWrapper<'a, T> {
   |      -- lifetime `'a` defined here
...
LL |             (self.func)(arg)
   |             ------------^^^-
   |             |           |
   |             |           mutable borrow starts here in previous iteration of loop
   |             argument requires that `*arg` is borrowed for `'a`

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0499`.
